Fixed the zoom on mobile.

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -181,7 +181,12 @@ html.dark .mastery-card__icon {
 
 @media (max-width: 640px) {
     .home-hero-bg {
-        object-position: 55%;
+        object-position: 53%;
+    }
+
+    .home-hero-wrapper {
+        aspect-ratio: 1 / 4;
+        overflow-y: auto;
     }
 
     .home-hero-content {
